--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore Packer variables files containing sensitive information
+*.pkrvars.hcl
+
 # Local .terraform directories
 **/.terraform/*
 
