--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Build golden-grafana
     steps:
+      - name: Debug - Show Current Directory
+        run: pwd && ls -la
+
       - name: Checkout
         uses: actions/checkout@v4
 
