--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -8,6 +8,8 @@ env:
 
 jobs:
   packer:
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
     name: Build golden-grafana
     steps:
@@ -16,6 +18,13 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Azure CLI Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
