--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Validate build
         run: |
           echo "Validating packer build"
+          pwd && ls -la
           cd Chaos-labs/build/packer/golden-grafana
           packer validate .
 
