--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -39,7 +39,8 @@ jobs:
 
       - name: Set up packer ssh key
         run: |
-          echo "{{secrets.PACKER_GRAFANA_KEY}}" > ~/.ssh/packer_key
+
+          echo "${{secrets.PACKER_GRAFANA_KEY}}" > ~/.ssh/packer_key
           chmod 600 ~/.ssh/packer_key
 
       - name: Validate build
