add debugging for ssh key redirect

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -39,7 +39,8 @@ jobs:
 
       - name: Set up packer ssh key
         run: |
-
+          pwd
+          cd home && ls -la
           echo "${{ secrets.PACKER_GRAFANA_KEY }}" > ~/.ssh/packer_key
           chmod 600 ~/.ssh/packer_key
 
