add path to packer directory

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -55,6 +55,7 @@ jobs:
         id: build
         run: |
           echo "Building packer image"
+          cd build/packer/golden-grafana
           packer build \
           -var "ssh_private_key_file={HOME}/.ssh/packer_key" \
           -var "ssh_username=azureuser" \
