--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -50,7 +50,7 @@ jobs:
           echo "Validating packer build"
           cd build/packer/golden-grafana
           packer validate \
-          -var "ssh_private_key_file={HOME}/.ssh/packer_key" \
+          -var "ssh_private_key_file=${HOME}/.ssh/packer_key" \
           -var "ssh_username=azureuser"
 
       - name: Build image
