--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -49,9 +49,11 @@ jobs:
         run: |
           echo "Validating packer build"
           cd build/packer/golden-grafana
+          pwd && ls
           packer validate \
           -var "ssh_private_key_file=${HOME}/.ssh/packer_key" \
           -var "ssh_username=azureuser"
+          ubuntu-server-jammy.pkr.hcl
 
       - name: Build image
         id: build
