add . for current working directory

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -50,7 +50,7 @@ jobs:
           echo "Validating packer build"
           cd build/packer/golden-grafana
           pwd && ls
-          packer validate \
+          packer validate . \
           -var "ssh_private_key_file=${HOME}/.ssh/packer_key"
           ubuntu-server-jammy.pkr.hcl
 
