--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -57,5 +57,5 @@ jobs:
           echo "Building packer image"
           cd build/packer/golden-grafana
           packer build \
-          -var 'ssh_private_key_file={HOME}/.ssh/packer_key' \
-          ubuntu-server-jammy.pkr.hcl
+            -var 'ssh_private_key_file=${HOME}/.ssh/packer_key' \
+            ubuntu-server-jammy.pkr.hcl
