update paths for trigger action

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -2,6 +2,9 @@ name: packer
 
 on:
   push:
+    paths:
+    - '../../build/packer/golden-grafana/'
+    - '../../.github/'
 
 env:
   PRODUCT_VERSION: "latest"
