add wild card for file paths

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -3,8 +3,8 @@ name: packer
 on:
   push:
     paths:
-    - '../../build/packer/golden-grafana/'
-    - '../../.github/'
+    - '../../build/packer/golden-grafana/**'
+    - '../../.github/**'
 
 env:
   PRODUCT_VERSION: "latest"
