add branch filter for main

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -2,9 +2,11 @@ name: packer
 
 on:
   push:
-    paths:
-    - '../../build/packer/golden-grafana/**'
-    - '../../.github/**'
+    branches:
+        - main
+        paths:
+          - '../../build/packer/golden-grafana/**'
+          - '../../.github/**'
 
 env:
   PRODUCT_VERSION: "latest"
