add debugging for packer build

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -58,6 +58,8 @@ jobs:
         run: |
           echo "Building packer image"
           cd build/packer/golden-grafana
+          echo "listing contents for debug:"
+          pwd && ls -la
           packer build \
             -var 'ssh_private_key_file=${HOME}/.ssh/packer_key' \
             ubuntu-server-jammy.pkr.hcl
