add correct syntax for var argument

--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -61,5 +61,5 @@ jobs:
           echo "debug for key location:"
           ls -la $HOME/.ssh
           packer build \
-            -var 'ssh_private_key_file=${HOME}/.ssh/packer_key' \
+            -var='ssh_private_key_file=${HOME}/.ssh/packer_key' \
             ubuntu-server-jammy.pkr.hcl
