--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -62,6 +62,6 @@ jobs:
           ls -la $HOME/.ssh
           packer build \
             -var='ssh_private_key_file=${HOME}/.ssh/packer_key' \
-            -var='subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }} \
+            -var='subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}' \
             -var-file=variables.pkr.hcl \
             ubuntu-server-jammy.pkr.hcl
