--- a/.github/workflows/golden-grafana.yml
+++ b/.github/workflows/golden-grafana.yml
@@ -63,5 +63,5 @@ jobs:
           packer build \
             -var="ssh_private_key_file=${HOME}/.ssh/packer_key" \
             -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
-            -var-file="golden-grafana-vars.auto.pkvars.hcl" \
+            -var-file="golden-grafana-vars.pkvars.hcl" \
             ubuntu-server-jammy.pkr.hcl
